--- a/euphoria-front/package.json
+++ b/euphoria-front/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^14.1.1",
     "react-router-dom": "^6.23.1",
+    "react-slideshow-image": "^4.3.1",
     "sass": "^1.77.1",
     "yup": "^1.4.0"
   },
