--- a/euphoria-front/package.json
+++ b/euphoria-front/package.json
@@ -17,9 +17,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^14.1.1",
+    "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
+    "react-slick": "^0.30.2",
     "react-slideshow-image": "^4.3.1",
     "sass": "^1.77.1",
+    "slick-carousel": "^1.8.1",
     "yup": "^1.4.0"
   },
   "devDependencies": {
