--- a/euphoria-front/package.json
+++ b/euphoria-front/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "formik": "^2.4.6",
     "i18next": "^23.11.4",
     "i18next-browser-languagedetector": "^8.0.0",
